k8s-specifications/ing.yaml
apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-voting-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: result
      port: 
        number: 31001 
  rules:
  - host: voting.doyel.com
    http:
      paths:
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 31001
      - path: /vote
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 31000
